--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -15,7 +15,7 @@
     <version>1.17-R0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>BungeeCord-Bootstrap</name>
+    <name>FrostCord-Bootstrap</name>
     <description>Java 1.6 loader for BungeeCord</description>
 
     <properties>
