--- a/proxy/pom.xml
+++ b/proxy/pom.xml
@@ -15,7 +15,7 @@
     <version>1.17-R0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>BungeeCord-Proxy</name>
+    <name>FrostCord-Proxy</name>
     <description>Proxy component of the Elastic Portal Suite</description>
 
     <properties>
